[package]
name = "serverlessd"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
v8 = "147.0.0"
reqwest = { version = "0.13", features = ["json"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url = "2.5.8"
thiserror = "2.0.18"

[dev-dependencies]
pnet = "0.35.0"
