[package]
name = "serverlessd"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
v8 = "147.0.0"
reqwest = { version = "0.13", features = ["json"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
hyper = { version = "1.9.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
url = "2.5.8"
thiserror = "2.0.18"
matchit = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
pnet = "0.35.0"
